fix the issue of toggle menu list not displaying on smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -236,13 +236,8 @@ ul {
 @media only screen and (max-width: 800px) {
   nav ul {
     position: absolute;
-    top: 70px;
-    left: 0;
-    /* background: radial-gradient(#fff, #fc6a03); */
-    width: 25%;
-    margin-top: 80px;
-    margin-left: 485px;
-    padding-left: 10px;
+    top: 140px;
+    right: 0;
     overflow: hidden;
     transition: max-height 0.5s;
   }
